--- a/Comp229-Assign01/Site.Master
+++ b/Comp229-Assign01/Site.Master
@@ -51,9 +51,9 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/">Home page</a></li>
+                        <li><a runat="server" href="~/About">About Me</a></li>
+                        <li><a runat="server" href="~/Contact">Contact Page</a></li>
                     </ul>
                 </div>
             </div>
